force-app/main/default/objects/Solution_Architect_Initiative__c/Solution_Architect_Initiative__c.object-meta.xml
<CustomObject>
    <description>For SA team to capture the initiatives related to Customer Account, Related Opportunity, Related Case, Primary Application, Target Use Cases, POCs etc</description>
    <label>Solution Architect Initiative</label>
    <nameField>
        <label>Solution Architect Initiative Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Solution Architect Initiatives</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>