force-app/main/default/objects/Solution_Architect_Initiative__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Solution Architect Initiatives</relationshipLabel>
    <relationshipName>Solution_Architect_Initiatives</relationshipName>
    <type>Lookup</type>
</CustomField>