force-app/main/default/objects/Solution_Architect_Initiative__c/fields/Account_Industry__c.field-meta.xml
<CustomField>
    <fullName>Account_Industry__c</fullName>
    <formula>TEXT (Account__r.Industry)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Industry</label>
    <type>Text</type>
</CustomField>