force-app/main/default/objects/Solution_Architect_Initiative__c/fields/Amount_of_RAM__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_RAM__c</fullName>
    <label>Amount of RAM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>