force-app/main/default/objects/Solution_Architect_Initiative__c/fields/Broker_Version__c.field-meta.xml
<CustomField>
    <fullName>Broker_Version__c</fullName>
    <label>Broker Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>