force-app/main/default/objects/Solution_Architect_Initiative__c/fields/Connection_Broker__c.field-meta.xml
<CustomField>
    <fullName>Connection_Broker__c</fullName>
    <label>Connection Broker</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Horizon</fullName>
            </value>
            <value>
                <fullName>CVAD</fullName>
            </value>
            <value>
                <fullName>MSFT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>