force-app/main/default/objects/Solution_Architect_Initiative__c/fields/CPU__c.field-meta.xml
<CustomField>
    <fullName>CPU__c</fullName>
    <label>CPU</label>
    <length>100</length>
    <type>Text</type>
</CustomField>