force-app/main/default/objects/Solution_Architect_Initiative__c/fields/Current_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Status__c</fullName>
    <inlineHelpText>Add text, images, links, etc.</inlineHelpText>
    <label>Current Status</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>