force-app/main/default/objects/Solution_Architect_Initiative__c/fields/Customer_PIC__c.field-meta.xml
<CustomField>
    <fullName>Customer_PIC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer PIC</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Solution Architect Initiatives</relationshipLabel>
    <relationshipName>Solution_Architect_Initiatives</relationshipName>
    <type>Lookup</type>
</CustomField>