force-app/main/default/objects/Solution_Architect_Initiative__c/fields/Customer_Tech_Contact_1__c.field-meta.xml
<CustomField>
    <fullName>Customer_Tech_Contact_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>1st Customer Technical Contact</description>
    <inlineHelpText>1st Customer Technical Contact</inlineHelpText>
    <label>Customer Tech Contact 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Solution Architect Initiatives (Tech Contact 1)</relationshipLabel>
    <relationshipName>Solution_Architect_Initiatives1</relationshipName>
    <type>Lookup</type>
</CustomField>