force-app/main/default/objects/Solution_Architect_Initiative__c/fields/Customer_Tech_Contact_2__c.field-meta.xml
<CustomField>
    <fullName>Customer_Tech_Contact_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>2nd Customer Technical Contact</description>
    <inlineHelpText>2nd Customer Technical Contact</inlineHelpText>
    <label>Customer Tech Contact 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Solution Architect Initiatives (Tech Contact 2)</relationshipLabel>
    <relationshipName>Solution_Architect_Initiatives2</relationshipName>
    <type>Lookup</type>
</CustomField>