force-app/main/default/objects/Solution_Architect_Initiative__c/fields/DevRel__c.field-meta.xml
<CustomField>
    <fullName>DevRel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DevRel</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Solution_Architect_Initiatives5</relationshipName>
    <type>Lookup</type>
</CustomField>