force-app/main/default/objects/Solution_Architect_Initiative__c/fields/DevTech__c.field-meta.xml
<CustomField>
    <fullName>DevTech__c</fullName>
    <label>DevTech</label>
    <type>TextArea</type>
</CustomField>