force-app/main/default/objects/Solution_Architect_Initiative__c/fields/Endpoint_Device_Model__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_Device_Model__c</fullName>
    <label>Endpoint Device Model</label>
    <length>100</length>
    <type>Text</type>
</CustomField>