force-app/main/default/objects/Solution_Architect_Initiative__c/fields/Endpoint_Device_Type__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_Device_Type__c</fullName>
    <label>Endpoint Device Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Desktop</fullName>
            </value>
            <value>
                <fullName>Laptop</fullName>
            </value>
            <value>
                <fullName>Thin Client</fullName>
            </value>
            <value>
                <fullName>Zero Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>