force-app/main/default/objects/Solution_Architect_Initiative__c/fields/Final_Status__c.field-meta.xml
<CustomField>
    <fullName>Final_Status__c</fullName>
    <label>Final Status</label>
    <type>TextArea</type>
</CustomField>