force-app/main/default/objects/Solution_Architect_Initiative__c/fields/Frame_Buffer__c.field-meta.xml
<CustomField>
    <fullName>Frame_Buffer__c</fullName>
    <label>Frame Buffer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1GB</fullName>
            </value>
            <value>
                <fullName>2GB</fullName>
            </value>
            <value>
                <fullName>3GB</fullName>
            </value>
            <value>
                <fullName>4GB</fullName>
            </value>
            <value>
                <fullName>6GB</fullName>
            </value>
            <value>
                <fullName>8GB</fullName>
            </value>
            <value>
                <fullName>12GB</fullName>
            </value>
            <value>
                <fullName>24GB</fullName>
            </value>
            <value>
                <fullName>48GB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>