force-app/main/default/objects/Solution_Architect_Initiative__c/fields/GPU__c.field-meta.xml
<CustomField>
    <fullName>GPU__c</fullName>
    <label>GPU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M10</fullName>
            </value>
            <value>
                <fullName>P40</fullName>
            </value>
            <value>
                <fullName>P6</fullName>
            </value>
            <value>
                <fullName>T4</fullName>
            </value>
            <value>
                <fullName>RTX 6000</fullName>
            </value>
            <value>
                <fullName>RTX 8000</fullName>
            </value>
            <value>
                <fullName>V100</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>