force-app/main/default/objects/Solution_Architect_Initiative__c/fields/Highest_Monitor_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Highest_Monitor_Resolution__c</fullName>
    <label>Highest Monitor Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>720p</fullName>
            </value>
            <value>
                <fullName>1080p</fullName>
            </value>
            <value>
                <fullName>4k</fullName>
            </value>
            <value>
                <fullName>5k</fullName>
            </value>
            <value>
                <fullName>8k</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>