force-app/main/default/objects/Solution_Architect_Initiative__c/fields/Is_this_a_POC__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_POC__c</fullName>
    <description>Indicates that this is a proof of concept</description>
    <inlineHelpText>&quot;Yes&quot; Indicates that this is a proof of concept</inlineHelpText>
    <label>Is this a POC?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>