force-app/main/default/objects/Solution_Architect_Initiative__c/fields/Is_this_an_early_access_eval__c.field-meta.xml
<CustomField>
    <fullName>Is_this_an_early_access_eval__c</fullName>
    <description>Yes indicates this is an early access eval.</description>
    <inlineHelpText>Yes indicates this is an early access eval.</inlineHelpText>
    <label>Is this an early access eval?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>