force-app/main/default/objects/Solution_Architect_Initiative__c/fields/JIRA_NVBUG_GIT_Link__c.field-meta.xml
<CustomField>
    <fullName>JIRA_NVBUG_GIT_Link__c</fullName>
    <inlineHelpText>URL for JIRA/NVBUG/GIT#</inlineHelpText>
    <label>JIRA/NVBUG/GIT# Link</label>
    <type>Url</type>
</CustomField>