force-app/main/default/objects/Solution_Architect_Initiative__c/fields/Key_Deliverable__c.field-meta.xml
<CustomField>
    <fullName>Key_Deliverable__c</fullName>
    <description>Description of Key Deliverable</description>
    <inlineHelpText>Description of Key Deliverable</inlineHelpText>
    <label>Key Deliverable</label>
    <type>TextArea</type>
</CustomField>