force-app/main/default/objects/Solution_Architect_Initiative__c/fields/License_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Type__c</fullName>
    <label>License Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>vAPPs</fullName>
            </value>
            <value>
                <fullName>vPC</fullName>
            </value>
            <value>
                <fullName>QvDWS</fullName>
            </value>
            <value>
                <fullName>vCS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>