force-app/main/default/objects/Solution_Architect_Initiative__c/fields/Link_to_JIRA__c.field-meta.xml
<CustomField>
    <fullName>Link_to_JIRA__c</fullName>
    <description>URL link to JIRA ticket</description>
    <inlineHelpText>URL link to JIRA ticket</inlineHelpText>
    <label>Link to JIRA</label>
    <type>Url</type>
</CustomField>