force-app/main/default/objects/Solution_Architect_Initiative__c/fields/Link_to_NVBUGs__c.field-meta.xml
<CustomField>
    <fullName>Link_to_NVBUGs__c</fullName>
    <description>URL link to NVBUGs</description>
    <inlineHelpText>URL link to NVBUGs</inlineHelpText>
    <label>Link to NVBUGs</label>
    <type>Url</type>
</CustomField>