force-app/main/default/objects/Solution_Architect_Initiative__c/fields/Link_to_Project_Page__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Project_Page__c</fullName>
    <description>URL to project page</description>
    <inlineHelpText>URL to project page</inlineHelpText>
    <label>Link to Project Page</label>
    <type>Url</type>
</CustomField>