force-app/main/default/objects/Solution_Architect_Initiative__c/fields/Networking_SA__c.field-meta.xml
<CustomField>
    <fullName>Networking_SA__c</fullName>
    <label>Networking SA</label>
    <type>TextArea</type>
</CustomField>