force-app/main/default/objects/Solution_Architect_Initiative__c/fields/NV_PIC__c.field-meta.xml
<CustomField>
    <fullName>NV_PIC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NV PIC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Solution_Architect_Initiatives</relationshipName>
    <type>Lookup</type>
</CustomField>