force-app/main/default/objects/Solution_Architect_Initiative__c/fields/NVIDIA_HW__c.field-meta.xml
<CustomField>
    <fullName>NVIDIA_HW__c</fullName>
    <description>i.e. DGX A100, Quadro RTX6000 etc</description>
    <inlineHelpText>i.e. DGX A100, Quadro RTX6000 etc</inlineHelpText>
    <label>NVIDIA HW</label>
    <length>255</length>
    <type>Text</type>
</CustomField>