force-app/main/default/objects/Solution_Architect_Initiative__c/fields/NVIDIA_SW_platform__c.field-meta.xml
<CustomField>
    <fullName>NVIDIA_SW_platform__c</fullName>
    <description>i.e. vGPU, OmniVerse, Metropolis, Clara, DeepStream SDK</description>
    <inlineHelpText>i.e. vGPU, OmniVerse, Metropolis, Clara, DeepStream SDK</inlineHelpText>
    <label>NVIDIA SW platform</label>
    <length>255</length>
    <type>Text</type>
</CustomField>