force-app/main/default/objects/Solution_Architect_Initiative__c/fields/OEM__c.field-meta.xml
<CustomField>
    <fullName>OEM__c</fullName>
    <label>OEM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dell</fullName>
            </value>
            <value>
                <fullName>HPE</fullName>
            </value>
            <value>
                <fullName>Cisco</fullName>
            </value>
            <value>
                <fullName>Lenovo</fullName>
            </value>
            <value>
                <fullName>Supermicro</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>