force-app/main/default/objects/Solution_Architect_Initiative__c/fields/Opportunity_Primary_Customer_Workload__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Primary_Customer_Workload__c</fullName>
    <description>Primary Customer Workload data from the Opportunity Object</description>
    <formula>TEXT(Related_Opportunity__r.Primary_Customer_Use_Case__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Primary Customer Workload data from the Opportunity Object</inlineHelpText>
    <label>Opportunity Primary Customer Workload</label>
    <type>Text</type>
</CustomField>