force-app/main/default/objects/Solution_Architect_Initiative__c/fields/Other_Applications__c.field-meta.xml
<CustomField>
    <fullName>Other_Applications__c</fullName>
    <label>Other Applications</label>
    <length>150</length>
    <type>Text</type>
</CustomField>