force-app/main/default/objects/Solution_Architect_Initiative__c/fields/Other_OEM__c.field-meta.xml
<CustomField>
    <fullName>Other_OEM__c</fullName>
    <label>Other OEM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>