force-app/main/default/objects/Solution_Architect_Initiative__c/fields/Other_Unique_Endpoint_Devices__c.field-meta.xml
<CustomField>
    <fullName>Other_Unique_Endpoint_Devices__c</fullName>
    <label>Other Unique Endpoint Devices</label>
    <length>100</length>
    <type>Text</type>
</CustomField>