force-app/main/default/objects/Solution_Architect_Initiative__c/fields/Primary_Application__c.field-meta.xml
<CustomField>
    <fullName>Primary_Application__c</fullName>
    <label>Primary Application</label>
    <type>TextArea</type>
</CustomField>