force-app/main/default/objects/Solution_Architect_Initiative__c/fields/Primary_OS__c.field-meta.xml
<CustomField>
    <fullName>Primary_OS__c</fullName>
    <label>Primary OS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Windows 10</fullName>
            </value>
            <value>
                <fullName>Windows Server</fullName>
            </value>
            <value>
                <fullName>Linux (Red Hat)</fullName>
            </value>
            <value>
                <fullName>Linux (CentOS)</fullName>
            </value>
            <value>
                <fullName>Linux (Ubuntu)</fullName>
            </value>
            <value>
                <fullName>Linux (SUSE)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>