force-app/main/default/objects/Solution_Architect_Initiative__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Associated Product</description>
    <inlineHelpText>Choose the product associated</inlineHelpText>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OV</fullName>
            </value>
            <value>
                <fullName>Quadro</fullName>
            </value>
            <value>
                <fullName>RTX Server</fullName>
            </value>
            <value>
                <fullName>VGaming</fullName>
            </value>
            <value>
                <fullName>vGPU</fullName>
            </value>
            <value>
                <fullName>DGX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>