force-app/main/default/objects/Solution_Architect_Initiative__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <description>Project Description</description>
    <inlineHelpText>Project Description</inlineHelpText>
    <label>Project</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>