force-app/main/default/objects/Solution_Architect_Initiative__c/fields/Proof_of_Concept_POC_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Proof_of_Concept_POC_End_Date__c</fullName>
    <label>Proof-of-Concept (POC) End Date</label>
    <type>Date</type>
</CustomField>