force-app/main/default/objects/Solution_Architect_Initiative__c/fields/Proof_of_Concept_POC_Status__c.field-meta.xml
<CustomField>
    <fullName>Proof_of_Concept_POC_Status__c</fullName>
    <label>Proof-of-Concept (POC) Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>Initial Setup</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>Technical Win</fullName>
            </value>
            <value>
                <fullName>Technical Loss</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Delayed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>