force-app/main/default/objects/Solution_Architect_Initiative__c/fields/Related_NPN_CSP_Usage_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Related_NPN_CSP_Usage_Tracker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related NPN CSP Usage Tracker</label>
    <referenceTo>NPN_CSP_Usage_Tracker__c</referenceTo>
    <relationshipLabel>Solution Architect Initiatives</relationshipLabel>
    <relationshipName>Solution_Architect_Initiatives</relationshipName>
    <type>Lookup</type>
</CustomField>