force-app/main/default/objects/Solution_Architect_Initiative__c/fields/Related_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Solution Architect Initiatives</relationshipLabel>
    <relationshipName>Solution_Architect_Initiatives</relationshipName>
    <type>Lookup</type>
</CustomField>