force-app/main/default/objects/Solution_Architect_Initiative__c/fields/Remoting_Protocol__c.field-meta.xml
<CustomField>
    <fullName>Remoting_Protocol__c</fullName>
    <label>Remoting Protocol</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HDX</fullName>
            </value>
            <value>
                <fullName>PCoIP (VMware)</fullName>
            </value>
            <value>
                <fullName>PCoIP Ultra (Teradici)</fullName>
            </value>
            <value>
                <fullName>Blast</fullName>
            </value>
            <value>
                <fullName>RDP</fullName>
            </value>
            <value>
                <fullName>Other (RDS/TGX/SPICE)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>