force-app/main/default/objects/Solution_Architect_Initiative__c/fields/SA_1__c.field-meta.xml
<CustomField>
    <fullName>SA_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SA 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Solution_Architect_Initiatives1</relationshipName>
    <type>Lookup</type>
</CustomField>