force-app/main/default/objects/Solution_Architect_Initiative__c/fields/SA_2__c.field-meta.xml
<CustomField>
    <fullName>SA_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SA 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Solution_Architect_Initiatives2</relationshipName>
    <type>Lookup</type>
</CustomField>