force-app/main/default/objects/Solution_Architect_Initiative__c/fields/SA_3__c.field-meta.xml
<CustomField>
    <fullName>SA_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SA 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Solution_Architect_Initiatives3</relationshipName>
    <type>Lookup</type>
</CustomField>