force-app/main/default/objects/Solution_Architect_Initiative__c/fields/SA_Initiative_1__c.field-meta.xml
<CustomField>
    <fullName>SA_Initiative_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>1st Solution Architect Initiative</description>
    <inlineHelpText>1st Solution Architect Initiative</inlineHelpText>
    <label>SA Initiative 1</label>
    <referenceTo>Solution_Architect_Initiative__c</referenceTo>
    <relationshipLabel>Solution Architect Initiatives (SA Initiative 1)</relationshipLabel>
    <relationshipName>Solution_Architect_Initiatives1</relationshipName>
    <type>Lookup</type>
</CustomField>