force-app/main/default/objects/Solution_Architect_Initiative__c/fields/SA_Initiative_2__c.field-meta.xml
<CustomField>
    <fullName>SA_Initiative_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>2nd Solution Architect Initiative</description>
    <inlineHelpText>2nd Solution Architect Initiative</inlineHelpText>
    <label>SA Initiative 2</label>
    <referenceTo>Solution_Architect_Initiative__c</referenceTo>
    <relationshipLabel>Solution Architect Initiatives (SA Initiative 2)</relationshipLabel>
    <relationshipName>Solution_Architect_Initiatives2</relationshipName>
    <type>Lookup</type>
</CustomField>