force-app/main/default/objects/Solution_Architect_Initiative__c/fields/SA_PIC__c.field-meta.xml
<CustomField>
    <fullName>SA_PIC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Solution Architect PIC</inlineHelpText>
    <label>SA PIC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Solution_Architect_Initiatives6</relationshipName>
    <type>Lookup</type>
</CustomField>