force-app/main/default/objects/Solution_Architect_Initiative__c/fields/Server_Model__c.field-meta.xml
<CustomField>
    <fullName>Server_Model__c</fullName>
    <label>Server Model</label>
    <length>100</length>
    <type>Text</type>
</CustomField>