force-app/main/default/objects/Solution_Architect_Initiative__c/fields/Solution_Architect_Initiative_Count__c.field-meta.xml
<CustomField>
    <fullName>Solution_Architect_Initiative_Count__c</fullName>
    <description>used for counting Solution Architect Initiatives separate from the record count</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>used for counting Solution Architect Initiatives separate from the record count</inlineHelpText>
    <label>Solution Architect Initiative Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>