force-app/main/default/objects/Solution_Architect_Initiative__c/fields/Success_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Success_Criteria__c</fullName>
    <label>Success Criteria</label>
    <type>TextArea</type>
</CustomField>