force-app/main/default/objects/Solution_Architect_Initiative__c/fields/Target_Use_Case__c.field-meta.xml
<CustomField>
    <fullName>Target_Use_Case__c</fullName>
    <label>Target Use Case</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Heavy Graphics Users</fullName>
            </value>
            <value>
                <fullName>Knowledge Workers</fullName>
            </value>
            <value>
                <fullName>ML/DL</fullName>
            </value>
            <value>
                <fullName>Other Compute</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>