force-app/main/default/objects/Solution_Architect_Initiative__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <label>Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VMware</fullName>
            </value>
            <value>
                <fullName>Citrix</fullName>
            </value>
            <value>
                <fullName>Nutanix</fullName>
            </value>
            <value>
                <fullName>Red Hat</fullName>
            </value>
            <value>
                <fullName>KVM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>