force-app/main/default/objects/Solution_Architect_Initiative__c/fields/Virtualization_Type__c.field-meta.xml
<CustomField>
    <fullName>Virtualization_Type__c</fullName>
    <label>Virtualization Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Shared Desktop</fullName>
            </value>
            <value>
                <fullName>Desktop</fullName>
            </value>
            <value>
                <fullName>Passthrough</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>