force-app/main/default/objects/Solution_Architect_Initiative__c/fields/X3rd_Party_HW__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_HW__c</fullName>
    <description>i.e server/workstation</description>
    <inlineHelpText>i.e server/workstation</inlineHelpText>
    <label>3rd Party HW</label>
    <length>255</length>
    <type>Text</type>
</CustomField>