force-app/main/default/objects/Solution_Architect_Initiative__c/recordTypes/CRISP_Initiative.recordType-meta.xml
<RecordType>
    <fullName>CRISP_Initiative</fullName>
    <active>true</active>
    <description>Solution Architect Initiatives for the CRISP Industry</description>
    <label>CRISP SA Initiative</label>
</RecordType>