force-app/main/default/objects/Solution_Architect_Initiative__c/recordTypes/Generic_SA_Initiatives.recordType-meta.xml
<RecordType>
    <fullName>Generic_SA_Initiatives</fullName>
    <active>true</active>
    <description>Solution Architect Initiative for General Use</description>
    <label>Generic SA Initiative</label>
</RecordType>