force-app/main/default/objects/Solution_Architect_Initiative__c/recordTypes/GRID_POC_Initiative.recordType-meta.xml
<RecordType>
    <fullName>GRID_POC_Initiative</fullName>
    <active>true</active>
    <description>Solution Architect Initiatives for vGPU POC</description>
    <label>vGPU POC SA Initiative</label>
</RecordType>