force-app/main/default/objects/Solution_Architect_Initiative__c/recordTypes/Telco_SA_Initiatives.recordType-meta.xml
<RecordType>
    <fullName>Telco_SA_Initiatives</fullName>
    <active>true</active>
    <description>Solution Architect Initiatives for the Telecommunications Industry</description>
    <label>Telco SA Initiative</label>
</RecordType>