force-app/main/default/objects/Solution_Architect_Initiative__c/listViews/All_Open_CRISP_SA_Initiatives.listView-meta.xml
<ListView>
    <fullName>All_Open_CRISP_SA_Initiatives</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Solution_Architect_Initiative__c.CRISP_Initiative</value>
    </filters>
    <label>All Open CRISP SA Initiatives</label>
</ListView>